    - Closes #4663.
  - New Permission Nodes:
    - towny.command.town.list.ruined
    - towny.command.town.list.bankrupt
    - both are child nodes of towny.command.town.list.*
  - Fix spanish.yml having bad yaml.
  - Potentially fix Towny not getting the largest meta node value in some cases where a player's primary permission group could not be resolved.
  - Fix mayors and assistants not being able to /plot nfs their own personal plots.
  - New Config Option: invite_system.expirationtime
    - default: 0m
    - When set for more than 0m, the amount of time (in minutes) until an invite is considered expired and is removed. Invites are checked for expiration once every hour.
    - Valid values would include: 30s, 30m, 24h, 2d, etc.
    - Closes #4086.
  - Bank history commands added.
    - See new commands below for /t, /n and /ta.
    - Displays a book GUI to the player using the command.
    - When {page} is not specified, up to 10 transactions will be shown.
    - Does not persist across reloads, stop and starts.
  - New Commands:
    - /town bankhistory {pages}
    - /nation bankhistory {pages}
    - /ta town {townname} bankhistory {pages}
    - /ta nation {nationname} bankhistory {pages}
  - New permission nodes:
    - towny.commmand.town.bankhistory
      - child node of towny.command.town.*
    - towny.command.nation.bankhistory
      - child node of towny.command.nation.*
    - towny.command.townyadmin.town.bankhistory
      - child node of towny.command.townyadmin.town.*
    - towny.command.townyadmin.nation.bankhistory
      - child node of towny.command.townyadmin.nation.*
  - Add save method to Towny objects, courtesy of silverwolfg11 with PR #4670.
0.96.5.14:
  - Added Placeholder: %townyadvanced_nation_map_color_hex%, courtesy of Kovalskki with PR #4661.
    - returns the hex colour code of the nation's mapcolor set with /t set mapcolor (seen in dynmap-towny.)
  - es-419.yml updated to 0.97, courtesy of EuGNosii with PR #4675.